--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
            <!-- <h2>Contact Us</h2> -->
             <form action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="a0bc3911-450e-441a-844b-16d12b14cb10">
+                <input type="hidden" name="redirect" value="https://irlkrash.github.io/ma11/">
                 <label for="email">EMAIL:</label>
                 <input type="email" id="email" name="email" required>
                 
